--- a/julia_page.html
+++ b/julia_page.html
@@ -39,18 +39,18 @@
             <tr>
                 <td>1교시</td>
                 <td>웹 통신</td>
-                <td>JAVA언어</td>
-                <td>JAVA언어</td>
-                <td>JAVA언어</td>
-                <td>JAVA언어</td>
+                <td>파이썬</td>
+                <td>파이썬</td>
+                <td>파이썬</td>
+                <td>파이썬</td>
             </tr>
             <tr>
                 <td>2교시</td>
-                <td>C언어</td>
-                <td>웹프로그래밍언어</td>
-                <td>웹프로그래밍언어</td>
-                <td>JAVA언어</td>
-                <td>JAVA언어</td>
+                <td>파이썬</td>
+                <td>하둡</td>
+                <td>하둡</td>
+                <td>스파크</td>
+                <td>스파크</td>
             </tr>
         </tbody>
     </table>
